<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nombre"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_apellidos"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_correo"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_phone"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_politica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_politicaprivacidad" />

    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@android:string/ok" />
</LinearLayout>